# Sefirah

./: CMakeLists.txt  CMakeSettings.json  README.md
docs/: design.md
src/: engine.cpp  engine.h  main.cpp  neural.cpp  neural.h  organism.cpp  organism.h  renderer.cpp  renderer.h  shader.cpp  shader.h  world.cpp  world.h
